[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splashlab"
packages = "splashlab"
version = "0.0.1"
authors = [
  { name="Spencer Truman", email="trumans24@gmail.com" },
]
description = "A package for fluid mechanic experimentalists"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/FluidsLab/SplashLab"